# implicari-backend

./: .gitignore  .travis.yml  Pipfile  Procfile  README.md  docker-compose.yml  implicari-django.code-workspace  manage.py  pyproject.toml
apps/classrooms/: admin.py  models.py  tests.py  views.py
apps/courses/: models.py
apps/evaluations/: admin.py  forms.py  models.py  urls.py  views.py
apps/events/: models.py  signals.py  tests.py  urls.py  views.py
apps/parents/: apps.py  forms.py  tests.py  urls.py
apps/persons/: admin.py  models.py
apps/posts/: models.py  tasks.py  urls.py  views.py
apps/questions/: admin.py  apps.py  models.py  tasks.py  tests.py  views.py
apps/schools/: admin.py  forms.py  models.py  urls.py  views.py
apps/students/: apps.py  forms.py  views.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
classrooms/: __init__.py  apps.py  forms.py  models.py  schema.py  tests.py  urls.py  views.py
classrooms/migrations/: 0001_initial.py  0002_auto_20180816_1540.py  0003_auto_20190307_0325.py
config/: context_processors.py  schema.py  settings.py  tests.py  urls.py  views.py  wsgi.py
config/settings/: base.py  development.py  production.py
events/: apps.py  models.py  signals.py  tasks.py  tests.py  urls.py
fixtures/: classrooms.fake.json  persons.fake.json  posts.fake.json  users.fake.json  users.json
implicari/config/: asgi.py  settings.py  urls.py  wsgi.py
parents/: forms.py  tasks.py  tests.py  urls.py  views.py
posts/: apps.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
questions/: models.py  signals.py  tests.py  urls.py
scripts/: build_dev_database.sh  fixtures_load.sh  rebuild_dev_database.sh
students/: forms.py  tests.py  urls.py  views.py
templates/: base.html  index.html
users/: forms.py  models.py  schema.py  tests.py  urls.py  views.py
(+193 files in other folders)
