[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Saúl Hormazábal", email = "saul.hormazabal@gmail.com"},
]
dependencies = [
    "django>=4.1.3",
    "django-extensions>=3.2.1",
    "python-decouple>=3.6",
    "psycopg2-binary>=2.9.5",
    "django-better-admin-arrayfield>=1.4.2",
    "html2text>=2020.1.16",
]
requires-python = ">=3.11"
license = {text = ""}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "django-debug-toolbar>=3.7.0",
    "werkzeug>=2.2.2",
    "bpython>=0.23",
]
